--- a/templates/GamePage/Phases/Play/style.module.css
+++ b/templates/GamePage/Phases/Play/style.module.css
@@ -66,6 +66,8 @@
     width: 100%;
     bottom: 0;
 
+    overflow: hidden;
+
     height: 100%;
     max-height: 0;
 
@@ -73,6 +75,6 @@
   }
 
   .hand.hand--open {
-    max-height: 50vh;
+    max-height: 60vh;
   }
 }
